# napl

./: .gitignore  README.md  install.sh  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.github/workflows/: release.yml
.hl/: lock.json  map.json
.hl/attribution/: greeting.yaml
.hl/ir/: greeting.yaml
.hl/prompts-at-gen/: greeting.md
apps/site/: .gitignore  package.json  source.config.ts  tsconfig.json  turbo.json  vite.config.ts  vitest.config.ts  vitest.e2e.config.ts  wrangler.jsonc
apps/vscode/: build.mjs  napl-0.1.0.vsix  package.json
conformance/: package.json  tsconfig.json  vitest.config.ts
conformance/fake-claude/: cargo  claude  npx
conformance/runner/: cli.ts  compare.test.ts  compare.ts  execute.ts  harness.test.ts  load.test.ts  load.ts  report.ts  run-all.ts  template.test.ts  template.ts  types.ts
conformance/scenarios/: 01-init-fresh.yaml  02-init-idempotent.yaml  03-version.yaml  04-build-deprecated.yaml  (+41 more)
docs/: DESIGN.md  selfhost-map.md  selfhost.md
examples/: greeting.hl
rust/: Cargo.toml  README.md
rust/crates/napl-cli/: Cargo.toml
rust/crates/napl-cli/src/: clock.rs  cmd_blame.rs  cmd_build.rs  cmd_gen.rs  cmd_init.rs  cmd_reconcile.rs  cmd_status.rs  cmd_test.rs  cmd_watch.rs  discovery.rs  driftdetect.rs  error.rs  fsutil.rs  healing.rs  main.rs  paths.rs  process.rs  snapshot.rs  state.rs  statusclass.rs
rust/crates/napl-core/: Cargo.toml
rust/crates/napl-core/src/: blame.rs  body_lines.rs  drift.rs  extensions.rs  guard.rs  hash.rs  incremental.rs  lib.rs  parse_output.rs  prompts.rs  reverse.rs  scanner.rs  targets.rs  text_diff.rs  yaml.rs
rust/crates/napl-core/src/schemas/: attribution.rs  frontmatter.rs  ir.rs  journal.rs  line_range.rs  lock.rs  map.rs  ml.rs  mod.rs  ordered_map.rs
rust/crates/napl-core/tests/: cross_check.rs
rust/crates/napl-lsp/: Cargo.toml
rust/crates/napl-lsp/src/: backend.rs  classify.rs  context.rs  convert.rs  diagnostics.rs  hover.rs  integration.rs  lib.rs  ml.rs  navigation.rs  state.rs  testkit.rs
rust/fixtures/: blame_cases.json  diff_cases.json  hash_cases.json  scanner_cases.json  schema_cases.json
selfhost/: .gitignore  blame_render.napl  body_lines.napl  drift.napl  extensions.napl  guard.napl  reconcile_derive.napl  schemas_attribution.napl  schemas_journal.napl  schemas_line_range.napl  schemas_lock.napl  schemas_map.napl  schemas_ml.napl  schemas_ordered_map.napl  text_diff.napl  watch_filter.napl
selfhost/.napl/src/rust/: Cargo.toml
selfhost/.napl/src/rust/blame/: Cargo.toml
selfhost/.napl/src/rust/blame/src/: lib.rs
selfhost/.napl/src/rust/blame_render/: Cargo.toml
selfhost/.napl/src/rust/blame_render/src/: lib.rs
selfhost/.napl/src/rust/body_lines/: Cargo.toml
selfhost/.napl/src/rust/body_lines/src/: lib.rs
selfhost/.napl/src/rust/build_notice/: Cargo.toml
selfhost/.napl/src/rust/build_notice/src/: lib.rs
selfhost/.napl/src/rust/discovery_core/: Cargo.toml
selfhost/.napl/src/rust/discovery_core/src/: lib.rs
selfhost/.napl/src/rust/drift/: Cargo.toml
selfhost/.napl/src/rust/drift/src/: lib.rs
selfhost/.napl/src/rust/extensions/: Cargo.toml
selfhost/.napl/src/rust/extensions/src/: lib.rs
selfhost/.napl/src/rust/fsutil_io/: Cargo.toml
selfhost/.napl/src/rust/fsutil_io/src/: lib.rs
selfhost/.napl/src/rust/guard/: Cargo.toml
selfhost/.napl/src/rust/guard/src/: lib.rs
selfhost/.napl/src/rust/hash/: Cargo.toml
selfhost/.napl/src/rust/hash/src/: lib.rs
selfhost/.napl/src/rust/parse_output/: Cargo.toml
selfhost/.napl/src/rust/parse_output/src/: lib.rs
selfhost/.napl/src/rust/prompts/src/: lib.rs
selfhost/.napl/src/rust/reconcile_derive/: Cargo.toml
selfhost/.napl/src/rust/reconcile_derive/src/: lib.rs
selfhost/.napl/src/rust/reverse/: Cargo.toml
selfhost/.napl/src/rust/reverse/src/: lib.rs
selfhost/.napl/src/rust/scanner/src/: lib.rs
selfhost/.napl/src/rust/schemas_attribution/: Cargo.toml
selfhost/.napl/src/rust/schemas_attribution/src/: lib.rs
selfhost/.napl/src/rust/schemas_frontmatter/: Cargo.toml
selfhost/.napl/src/rust/schemas_frontmatter/src/: lib.rs
selfhost/.napl/src/rust/schemas_ir/: Cargo.toml
selfhost/.napl/src/rust/schemas_ir/src/: lib.rs
selfhost/.napl/src/rust/schemas_journal/src/: lib.rs
selfhost/.napl/src/rust/schemas_line_range/: Cargo.toml
selfhost/.napl/src/rust/schemas_line_range/src/: lib.rs
selfhost/.napl/src/rust/schemas_lock/: Cargo.toml
selfhost/.napl/src/rust/schemas_lock/src/: lib.rs
selfhost/.napl/src/rust/schemas_map/: Cargo.toml
selfhost/.napl/src/rust/schemas_map/src/: lib.rs
selfhost/.napl/src/rust/schemas_ml/: Cargo.toml
selfhost/.napl/src/rust/schemas_ml/src/: lib.rs
selfhost/.napl/src/rust/schemas_ordered_map/: Cargo.toml
selfhost/.napl/src/rust/schemas_ordered_map/src/: lib.rs
selfhost/.napl/src/rust/snapshot_filter/: Cargo.toml
selfhost/.napl/src/rust/snapshot_filter/src/: lib.rs
selfhost/.napl/src/rust/src/: lib.rs
selfhost/.napl/src/rust/targets/: Cargo.toml
selfhost/.napl/src/rust/targets/src/: lib.rs
selfhost/.napl/src/rust/text_diff/: Cargo.toml
selfhost/.napl/src/rust/text_diff/src/: lib.rs
selfhost/.napl/src/rust/watch_filter/: Cargo.toml
selfhost/.napl/src/rust/watch_filter/src/: lib.rs
selfhost/equivalence/: Cargo.toml
selfhost/equivalence/tests/: blame.rs  blame_render.rs  build_notice.rs  corpus.rs  discovery_core.rs  drift.rs  extensions.rs  guard.rs  hash.rs  parse_output.rs  prompts.rs  reconcile_derive.rs  reverse.rs  scanner.rs  schemas_attribution.rs  schemas_frontmatter.rs  schemas_ir.rs  schemas_line_range.rs  schemas_lock.rs  schemas_map.rs  schemas_ml.rs  schemas_ordered_map.rs  snapshot_filter.rs  targets.rs  text_diff.rs  watch_filter.rs
src/: cli.ts
test/: adapter.test.ts  attribution.test.ts  build.test.ts  frontmatter.test.ts  gen-lock.test.ts  gen.test.ts  hash.test.ts  incremental.test.ts  ir-schema.test.ts  llm.test.ts  lock.test.ts  map.test.ts  parse-output.test.ts  reverse.test.ts  save-trigger.test.ts  scanner.test.ts  status.test.ts
(+362 files in other folders)
