[workspace]
resolver = "2"
members = ["crates/napl-core", "crates/napl-cli"]

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
many_single_char_names = "allow"
similar_names = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"
