[package]
name = "equivalence"
version = "0.1.0"
edition = "2021"

[dependencies]
body_lines = { path = "../.napl/src/rust/body_lines" }
extensions = { path = "../.napl/src/rust/extensions" }
hash = { path = "../.napl/src/rust/hash" }
parse_output = { path = "../.napl/src/rust/parse_output" }
text_diff = { path = "../.napl/src/rust/text_diff" }
schemas_ordered_map = { path = "../.napl/src/rust/schemas_ordered_map" }
schemas_line_range = { path = "../.napl/src/rust/schemas_line_range" }
schemas_ir = { path = "../.napl/src/rust/schemas_ir" }
schemas_frontmatter = { path = "../.napl/src/rust/schemas_frontmatter" }
drift = { path = "../.napl/src/rust/drift" }
guard = { path = "../.napl/src/rust/guard" }
targets = { path = "../.napl/src/rust/targets" }
scanner = { path = "../.napl/src/rust/scanner" }
schemas_lock = { path = "../.napl/src/rust/schemas_lock" }
schemas_attribution = { path = "../.napl/src/rust/schemas_attribution" }
schemas_ml = { path = "../.napl/src/rust/schemas_ml" }
schemas_map = { path = "../.napl/src/rust/schemas_map" }
blame = { path = "../.napl/src/rust/blame" }
reverse = { path = "../.napl/src/rust/reverse" }
schemas_journal = { path = "../.napl/src/rust/schemas_journal" }
incremental = { path = "../.napl/src/rust/incremental" }
yaml = { path = "../.napl/src/rust/yaml" }
prompts = { path = "../.napl/src/rust/prompts" }
clock_fmt = { path = "../.napl/src/rust/clock_fmt" }
paths_core = { path = "../.napl/src/rust/paths_core" }
statusclass_render = { path = "../.napl/src/rust/statusclass_render" }
driftdetect_replay = { path = "../.napl/src/rust/driftdetect_replay" }
snapshot_diff = { path = "../.napl/src/rust/snapshot_diff" }
snapshot_filter = { path = "../.napl/src/rust/snapshot_filter" }
blame_render = { path = "../.napl/src/rust/blame_render" }
watch_filter = { path = "../.napl/src/rust/watch_filter" }
reconcile_derive = { path = "../.napl/src/rust/reconcile_derive" }

[dev-dependencies]
serde_json = "1"
serde_yaml = "0.9"
