[package]
name = "napl-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "napl"
path = "src/main.rs"

[dependencies]
napl-core = { path = "../napl-core" }
napl-lsp = { path = "../napl-lsp" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
clap = { version = "4", features = ["derive"] }
notify = "8"
ctrlc = "3"

clock_fmt = { path = "../../../selfhost/.napl/src/rust/clock_fmt" }
paths_core = { path = "../../../selfhost/.napl/src/rust/paths_core" }
statusclass_render = { path = "../../../selfhost/.napl/src/rust/statusclass_render" }
driftdetect_replay = { path = "../../../selfhost/.napl/src/rust/driftdetect_replay" }
snapshot_diff = { path = "../../../selfhost/.napl/src/rust/snapshot_diff" }
snapshot_filter = { path = "../../../selfhost/.napl/src/rust/snapshot_filter" }
blame_render = { path = "../../../selfhost/.napl/src/rust/blame_render" }
watch_filter = { path = "../../../selfhost/.napl/src/rust/watch_filter" }
reconcile_derive = { path = "../../../selfhost/.napl/src/rust/reconcile_derive" }
gen_classify = { path = "../../../selfhost/.napl/src/rust/gen_classify" }
gen_prompt_diff = { path = "../../../selfhost/.napl/src/rust/gen_prompt_diff" }
gen_attribution_check = { path = "../../../selfhost/.napl/src/rust/gen_attribution_check" }
gen_mode = { path = "../../../selfhost/.napl/src/rust/gen_mode" }
fsutil_io = { path = "../../../selfhost/.napl/src/rust/fsutil_io" }
build_notice = { path = "../../../selfhost/.napl/src/rust/build_notice" }
discovery_core = { path = "../../../selfhost/.napl/src/rust/discovery_core" }

[lints]
workspace = true
