[package]
name = "napl-lsp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
napl-core = { path = "../napl-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tower-lsp-server = { version = "0.23", features = ["proposed"] }
tokio = { version = "1", features = ["rt-multi-thread", "io-std", "macros"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
