[workspace]
resolver = "2"
members = [
    "blame",
    "blame_render",
    "body_lines",
    "clock_fmt",
    "drift",
    "driftdetect_replay",
    "extensions",
    "guard",
    "hash",
    "incremental",
    "parse_output",
    "paths_core",
    "prompts",
    "reconcile_derive",
    "reverse",
    "scanner",
    "schemas_attribution",
    "schemas_frontmatter",
    "schemas_ir",
    "schemas_journal",
    "schemas_line_range",
    "schemas_lock",
    "schemas_map",
    "schemas_ml",
    "schemas_ordered_map",
    "snapshot_diff",
    "snapshot_filter",
    "statusclass_render",
    "targets",
    "text_diff",
    "watch_filter",
    "yaml",
]
