[workspace]
resolver = "2"
members = [
    "blame",
    "blame_render",
    "body_lines",
    "build_notice",
    "clock_fmt",
    "discovery_core",
    "drift",
    "driftdetect_replay",
    "extensions",
    "fsutil_io",
    "gen_attribution_check",
    "gen_classify",
    "gen_mode",
    "gen_prompt_diff",
    "guard",
    "hash",
    "incremental",
    "parse_output",
    "paths_core",
    "prompts",
    "reconcile_derive",
    "reverse",
    "scanner",
    "schemas_attribution",
    "schemas_frontmatter",
    "schemas_ir",
    "schemas_journal",
    "schemas_line_range",
    "schemas_lock",
    "schemas_map",
    "schemas_ml",
    "schemas_ordered_map",
    "snapshot_diff",
    "snapshot_filter",
    "statusclass_render",
    "targets",
    "text_diff",
    "watch_filter",
    "yaml",
]
